# Parallel_Project

./: .__afs241B  .__afs5E7D  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  ColorPlate.cu  Makefile  README.md  cmake_install.cmake  main.cpp  main.cpp~
