cmake_minimum_required(VERSION 2.8)
project( ColorPlate )
set(OpenCV_DIR /afs/cs.cmu.edu/academic/class/15418-s14/public/opencv2014/src/share/OpenCV)
INCLUDE_DIRECTORIES("/afs/cs.cmu.edu/academic/class/15418-s14/public/opencv2014/src/include")
find_package(OpenCV REQUIRED)
find_package(CUDA REQUIRED)
cuda_compile(colorplate_o ColorPlate.cu)
add_executable( ColorPlate main.cpp)
target_link_libraries( ColorPlate ${OpenCV_LIBS})