cmake_minimum_required(VERSION 2.8)
project( ColorPlate )
set(OpenCV_DIR /afs/cs.cmu.edu/academic/class/15418-s14/public/opencv2014/src/share/OpenCV)
INCLUDE_DIRECTORIES("/afs/cs.cmu.edu/academic/class/15418-s14/public/opencv2014/src/include")
INCLUDE_DIRECTORIES("/usr/local/cuda/lib64/")
INCLUDE_DIRECTORIES("/usr/local/cuda/bin")
find_package(OpenCV REQUIRED)
find_package(CUDA REQUIRED)
cuda_add_executable(ColorPlateCUDA ColorPlate.cu)
cuda_add_executable(ColorPlate main.cpp)
target_link_libraries( ColorPlate ${CUDA_LIBS} ${OpenCV_LIBS}) 
target_link_libraries( ColorPlateCUDA ${CUDA_LIBS} ${OpenCV_LIBS}) 